--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@ div#letter {
 }
 
 @media (cursor: pointer) {
-  #container { display: none !important; }
-  #videoElement { display: none !important; } 
+  #container { 
+    display: none !important; 
+    opacity: 0; 
+  }
+  #videoElement { 
+    display: none !important; 
+    opacity: 0;
+  } 
   #som {display: block;}
 }
 
