--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ div#letter {
   opacity:0;
 }
 
-@media (cursor: pointer) {
+@media (pointer: coarse) {
   #container { 
     display: none !important; 
     opacity: 0; 
